--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 .logout-btn:hover {
-  background-color: rgba(255, 255, 255, 0.1); /* نفس تأثير hover للروابط */
+  background-color: rgba(255, 255, 255, 0.1); 
   border-radius: 0.25rem;
   transition: background-color 0.2s ease;
 }
